--- a/source/themes/tekkie/tekkie-semantic/_layouts/onecolumn.html.twig
+++ b/source/themes/tekkie/tekkie-semantic/_layouts/onecolumn.html.twig
@@ -2,7 +2,7 @@
 
 {%- block content_wrapper -%}
 
-    <div class="ui divided grid">
+    <div class="ui grid stackable container">
         <div class="twelve wide column">
             {% block post_title %}{% endblock post_title %}
             {% block content %}{% endblock %}
