--- a/source/themes/tekkie/tekkie-semantic/_layouts/basic.html.twig
+++ b/source/themes/tekkie/tekkie-semantic/_layouts/basic.html.twig
@@ -1,37 +1,38 @@
 <!DOCTYPE html>
 
 <html>
-<head>
-    <link rel="shortcut icon" href="{{ site.url }}/themes/tekkie/tekkie-semantic/assets/images/favicon.ico">
+    <head>
+        <link rel="shortcut icon" href="{{ site.url }}/themes/tekkie/tekkie-semantic/assets/images/favicon.ico">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>{% block title %}{{ page.title }}{% endblock %}
-{%- if page.layout == 'post' or page.menu_active == 'blog' -%}
- &mdash; Tekkie Consulting Blog
-{%- else -%}
- &mdash; {{ site.title }} &mdash; {{ site.subtitle }}
-{%- endif -%}
-</title>
+      <title>{% block title %}{{ page.title }}{% endblock %}
+    {%- if page.layout == 'post' or page.menu_active == 'blog' -%}
+     &mdash; Tekkie Consulting Blog
+    {%- else -%}
+     &mdash; {{ site.title }} &mdash; {{ site.subtitle }}
+    {%- endif -%}
+    </title>
 
-    <link rel="stylesheet" href="{{ site.url }}/themes/tekkie/tekkie-semantic/assets/css/semantic.css" />
-    <link rel="stylesheet" href="{{ site.url }}/themes/tekkie/tekkie-semantic/assets/css/semantic-overrides.css" />
+        <link rel="stylesheet" href="{{ site.url }}/themes/tekkie/tekkie-semantic/assets/css/semantic.css" />
+        <link rel="stylesheet" href="{{ site.url }}/themes/tekkie/tekkie-semantic/assets/css/semantic-overrides.css" />
 
-</head>
+    </head>
 
-<body{% if page.html_id %} id="{{ page.html_id }}"{% endif %}>
+    <body{% if page.html_id %} id="{{ page.html_id }}"{% endif %}>
 
-{% include "navigation" with { 'style': 'ui top fixed inverted massive pointing menu', 'logo': 'logomark-tekkie-white.svg' } %}
+    {% include "navigation" with { 'style': 'ui  inverted stackable menu fixed main-nav', 'logo': 'logomark-tekkie-white.svg' } %}
 
-<div class="ui main container">
-{%- block content_wrapper -%}
-    {% block content %}{% endblock %}
-{%- endblock -%}
+    <div class="ui main pushed">
+    {%- block content_wrapper -%}
+        {% block content %}{% endblock %}
+    {%- endblock -%}
 
-</div><!-- .mainContent -->
+    </div><!-- .mainContent -->
 
-{% include "footer" %}
+    {% include "footer" %}
 
-<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/semantic.min.js"></script>
-{% block javascripts %}{% endblock %}
-</body>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js"></script>
+    <script type="text/javascript" src="{{ site.url }}/themes/tekkie/tekkie-semantic/assets/css/semantic.js"></script>
+    {% block javascripts %}{% endblock %}
+    </body>
 </html>
