--- a/source/themes/tekkie/tekkie-semantic/_layouts/post.html.twig
+++ b/source/themes/tekkie/tekkie-semantic/_layouts/post.html.twig
@@ -10,8 +10,8 @@
 {%- endfor -%}
 <h1 class="ui header">{{ page.title }}</h1>
 
-<div class="ui grid">
-    <div class="three column row">
+<div class="ui grid container">
+    <div class="two column row">
         <div class="left floated column">
             <a class="author-name" itemprop="author"  itemscope="" itemtype="http://schema.org/Person" href="{{ site.url }}/team/georgiana-gligor/">
                 <img class="ui right spaced avatar image" src="/avatars/georgiana-gligor.jpg">
@@ -47,9 +47,8 @@
 </div>
 {% endblock %}
 
-
 {% block contentSidebar %}
     <div class="card">
-        company CTA
+        {% include 'sidebar_cta.html.twig' %}
     </div>
 {% endblock contentSidebar %}
