more about text; small padding on page content

--- a/source/themes/tekkie/tekkie-semantic/assets/css/components/site.css
+++ b/source/themes/tekkie/tekkie-semantic/assets/css/components/site.css
@@ -201,3 +201,7 @@ body .ui.inverted::-webkit-scrollbar-thumb:hover {
          Site Overrides
 *******************************/
 
+.ui.main {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
