--- a/source/themes/tekkie/tekkie-semantic/assets/css/semantic.css
+++ b/source/themes/tekkie/tekkie-semantic/assets/css/semantic.css
@@ -758,6 +758,11 @@ body .ui.inverted::-webkit-scrollbar-thumb:hover {
 /*******************************
          Site Overrides
 *******************************/
+
+.ui.main {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
 /*!
  * # Semantic UI 2.2.13 - Button
  * http://github.com/semantic-org/semantic-ui/
